--- a/Andreenkova.html
+++ b/Andreenkova.html
@@ -73,15 +73,15 @@ Sys.WebForms.PageRequestManager._initialize('ToolkitScriptManager1', 'form1', ['
                 <div class="nav-inner">
                     <span></span><span></span><span></span></a><ul class="hmenu">
                         <li>
-                            <a id="lb1Default" class="lbMenu" href="file:///H:/%D0%A1%D0%B0%D0%B9%D1%82%20%D0%BF%D0%BE%20%D0%BF%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B5/%D1%81%D0%B0%D0%B9%D1%82%20(1)/index.html">Главная</a>
+                            <a id="lb1Default" class="lbMenu" href="https://firly7971.github.io/index.html">Главная</a>
                         </li>
                         <li>
-                            <a id="lb132EduOrg" href="javascript:__doPostBack('lb132EduOrg','')">Об учреждении</a>
+                            <a id="lb132EduOrg" href="http://spedkoll.ru/sveden-common.html">Об учреждении</a>
                         </li>
                         <li>
                             <a id="lb4Kaleidoscope" href="https://zen.yandex.ru/smolensk-i.ru?clid=300&country_code=us&_csrf=c48607db8e10d99565ad4bcf6f92a589aa30fbd0-1554811362708&token=&from_page=other_page">Калейдоскоп событий</a></li>
                         <li>
-                            <a id="lb5Contacts" href="javascript:__doPostBack('lb5Contacts','')">Контакты</a>
+                            <a id="lb5Contacts" href="https://firly7971.github.io/contact.html">Контакты</a>
                         </li>
                     </ul>
                 </div>
