--- a/Kozhevnikova.html
+++ b/Kozhevnikova.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Учитель</title>
+    <title>Кожевникова Ольга Павловна</title>
     <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width">
     <link href="Education/Teacher/Style/StyleCommonTeacher.css" rel="stylesheet">
     <link href="Education/Teacher/Style/style.responsiveTeacher.css" rel="stylesheet">
