--- a/Borodina.html
+++ b/Borodina.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Учитель</title>
+    <title>Бородина Галина Владимировна</title>
     <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width">
     <link href="Education/Teacher/Style/StyleCommonTeacher.css" rel="stylesheet">
     <link href="Education/Teacher/Style/style.responsiveTeacher.css" rel="stylesheet">
@@ -94,8 +94,7 @@ Sys.WebForms.PageRequestManager._initialize('ToolkitScriptManager1', 'form1', ['
                         <td style="width: 50%" class="layout-cell">
 
                             <h1 class="headline fio" data-left="46.78%" style="text-align: center; left: 28.4%;">
-                                <span id="lbName"><p style="margin-top:30px;">Бородина Галина Владимировна
-                                    </p></span>
+                                <span id="lbName"><p style="margin-top:30px;">Бородина Галина Владимировна</p></span>
                             </h1> 
                         </td>
                         <td style="width: 50%" class="layout-cell">
