--- a/Afan.html
+++ b/Afan.html
@@ -128,7 +128,7 @@ Sys.WebForms.PageRequestManager._initialize('ToolkitScriptManager1', 'form1', ['
                 <a id="lb132EduOrg" href="http://spedkoll.ru/sveden-common.html">Об учреждении</a>
             </li>
             <li>
-                <a id="lb4Kaleidoscope" href="#">Недавние события</a>
+                <a id="lb4Kaleidoscope" href="https://firly7971.github.io/news.html">Недавние события</a>
             </li>
             <li>
                 <a id="lb5Contacts" href="https://firly7971.github.io/contact.html">Контакты</a>
