--- a/Ivanchenko.html
+++ b/Ivanchenko.html
@@ -79,7 +79,7 @@ Sys.WebForms.PageRequestManager._initialize('ToolkitScriptManager1', 'form1', ['
                             <a id="lb132EduOrg" href="javascript:__doPostBack('lb132EduOrg','')">Об учреждении</a>
                         </li>
                         <li>
-                            <a id="lb4Kaleidoscope" href="#">Недавние события</a>
+                            <a id="lb4Kaleidoscope" href="https://firly7971.github.io/news.html">Недавние события</a>
                         </li>
                         <li>
                             <a id="lb5Contacts" href="javascript:__doPostBack('lb5Contacts','')">Контакты</a>
