--- a/Elkind.html
+++ b/Elkind.html
@@ -189,7 +189,7 @@ Sys.WebForms.PageRequestManager._initialize('ToolkitScriptManager1', 'form1', ['
                                                                 <input type="hidden" name="ctl14$wucRSS1$hfIdGroup" id="ctl14_wucRSS1_hfIdGroup" value="2">
                                                                 <input type="hidden" name="ctl14$wucRSS1$hfIdOrg" id="ctl14_wucRSS1_hfIdOrg" value="128">
                                                             </div>
-                                                            <img src="Coach/teach_025.jpg" alt="" style="width: 300px">
+                                                            <img src="Coach/teach_025.jpg" alt="" style="width: 270px; height: 350px;">
                                                         </div>
                                                         <div class="layout-cell layout-item-5" style="width: 50%">
                                                             <br>
