--- a/Kasatikova.html
+++ b/Kasatikova.html
@@ -200,7 +200,7 @@ Sys.WebForms.PageRequestManager._initialize('ToolkitScriptManager1', 'form1', ['
         <input type="hidden" name="ctl14$wucRSS1$hfIdOrg" id="ctl14_wucRSS1_hfIdOrg" value="128">
     
     </div>
-    <img src="Coach/teach_029.jpg" alt="" style="width: 430px;">
+    <img src="Coach/teach_029.jpg" alt="" style="width: 270px; height: 290px;">
             </div>
             <div class="layout-cell layout-item-5" style="width: 50%">
                 <br>
