--- a/news.html
+++ b/news.html
@@ -183,7 +183,7 @@ Sys.WebForms.PageRequestManager._initialize('ToolkitScriptManager1', 'form1', ['
                                     <ul>
                                         <li>
                                             <img src="Images/moscow.png" alt="" style="font-size: 10px;">
-                                            <a href="#">Экскурсия в Москву</a>
+                                            <a href="https://firly7971.github.io/excursion.html">Экскурсия в Москву</a>
                                         </li><br>
                                         <li>
                                             <img src="Images/museum.png" alt="">
